seedboxk8s/applications/nzbhydra2/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbhydra2
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbhydra2
  template:
    metadata:
      labels:
        app: nzbhydra2
    spec:
      containers:
        - image: linuxserver/nzbhydra2
          name: nzbhydra2
          ports:
            - containerPort: 5076
          volumeMounts:
            - mountPath: /config
              name: nzbhydra2-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: nzbhydra2-config-pvc
          persistentVolumeClaim:
            claimName: nzbhydra2-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
