seedboxk8s/applications/nzbhydra2/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nzbhydra2
  namespace: tortuga
spec:
  replicas: 1
  serviceName: nzbhydra2
  selector:
    matchLabels:
      app.kubernetes.io/name: nzbhydra2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nzbhydra2
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        # https://github.com/linuxserver/docker-nzbhydra2/releases
        - image: ghcr.io/linuxserver/nzbhydra2:v9.1.1-ls109
          name: nzbhydra2
          ports:
            - containerPort: 5076
          volumeMounts:
            - mountPath: /config
              name: nzbhydra2-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: data-import-helper
          configMap:
            name: data-import-helper
        - name: import
          emptyDir: {}
        - name: nzbhydra2-config-pvc
          persistentVolumeClaim:
            claimName: nzbhydra2-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
