seedboxk8s/applications/nzbhydra2/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra2
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: nzbhydra2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5076
