seedboxk8s/applications/nzbhydra2/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nzbhydra2
  namespace: tortuga
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: NZBHydra2
    gethomepage.dev/group: Downloads
    gethomepage.dev/icon: nzbhydra2
    gethomepage.dev/href: https://hydra2.${productionClusterFqdn}
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`hydra2.${productionClusterFqdn}`) || Host(`nzbhydra2.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: hydra2
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
